Fission a11y: Reorder event not fired on iframe accessible after OOP iframe is loaded
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox70 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
Details |
When opening a document with an OOP iframe, NVDA's virtual buffer sometimes doesn't include the content of the iframe once loaded. However, pressing NVDA+f5 to force refresh the buffer then shows the iframe's content as expected. I'm fairly sure this is because the iframe isn't firing a reorder event when the OOP DocAccessibleParent is added.
For same-process iframes, this gets handled by DocAccessible::DoInitialUpdate, since the iframe accessible is in the same process and is the parent of the document. This can't work for OOP iframes.
I think this event is going to need to be fired directly by the parent process, probably in DocAccessibleParent::AddChildDoc.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
For same-process iframe documents, this reorder event is fired by the content process.
This isn't possible when the document is in a different process to its embedder.
In this case, we need to fire it from the parent process when the embedded document accessible is added.
Comment 3•6 years ago
|
||
| bugherder | ||
Description
•